--- a/elevation_graphing.ipynb
+++ b/elevation_graphing.ipynb
@@ -2,17 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import matplotlib \n",
+    "import seaborn as sns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +129,7 @@
        "[100 rows x 2 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -251,13 +253,54 @@
        "Name: elevation, dtype: float64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df['elevation'].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32 -78.68\n",
+      "33 -78.635\n",
+      "34 -78.59\n",
+      "35 -78.545\n",
+      "36 -78.5\n",
+      "37 -78.455\n",
+      "38 -78.41000000000001\n",
+      "39 -78.36500000000001\n",
+      "40 -78.32000000000001\n",
+      "41 -78.275\n",
+      "42 -78.23\n",
+      "43 -78.185\n",
+      "44 -78.14\n",
+      "45 -78.095\n",
+      "46 -78.05000000000001\n",
+      "47 -78.00500000000001\n",
+      "48 -77.96000000000001\n",
+      "49 -77.915\n",
+      "50 -77.87\n",
+      "51 -77.825\n",
+      "52 -77.78\n",
+      "53 -77.735\n",
+      "54 -77.69\n"
+     ]
+    }
+   ],
+   "source": [
+    "for index, row in df.iterrows():\n",
+    "    if row[1] > 2000:\n",
+    "        print(index, row[0])"
    ]
   }
  ],
