Refactoring getting the data

--- a/get_data.ipynb
+++ b/get_data.ipynb
@@ -108,14 +108,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "data = []\n",
-    "for i in range(100):\n",
-    "    response = requests.get(f'https://elevation-api.io/api/elevation?points=({lat},{long + (i * 0.045)})&key={key}')\n",
-    "    data.append(response)"
+    "for i in range(20):\n",
+    "    for j in range(20):\n",
+    "        response = requests.get(f'https://elevation-api.io/api/elevation?points=({lat + (j * 0.045)},{long + (i * 0.045)})&key={key}')\n",
+    "        data.append(response)"
    ]
   },
   {
@@ -176,137 +177,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dictionary = {}\n",
+    "data_list = []\n",
     "for i in data:\n",
     "    d = i.json()\n",
-    "    l = d['elevations'][0]['lon']\n",
+    "    lo = d['elevations'][0]['lon']\n",
     "    e = d['elevations'][0]['elevation']\n",
+    "    la = d['elevations'][0]['lat']\n",
     "    # temp['long'].append(l)\n",
     "    # temp['elevation'].append(e)\n",
-    "    data_dictionary[l] = e"
+    "\n",
+    "    temp = [e, lo, la]\n",
+    "    data_list.append(temp)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{-80.12: 85.5,\n",
-       " -80.075: 160.5,\n",
-       " -80.03: 254.5,\n",
-       " -79.985: 161.0,\n",
-       " -79.94: 140.0,\n",
-       " -79.89500000000001: 168.0,\n",
-       " -79.85000000000001: 276.0,\n",
-       " -79.805: 336.0,\n",
-       " -79.76: 292.0,\n",
-       " -79.715: 250.0,\n",
-       " -79.67: 201.5,\n",
-       " -79.625: 152.0,\n",
-       " -79.58: 167.0,\n",
-       " -79.53500000000001: 191.0,\n",
-       " -79.49000000000001: 194.0,\n",
-       " -79.44500000000001: 200.0,\n",
-       " -79.4: 229.0,\n",
-       " -79.355: 234.0,\n",
-       " -79.31: 297.5,\n",
-       " -79.265: 343.5,\n",
-       " -79.22: 383.0,\n",
-       " -79.17500000000001: 431.5,\n",
-       " -79.13000000000001: 494.0,\n",
-       " -79.08500000000001: 552.0,\n",
-       " -79.04: 692.0,\n",
-       " -78.995: 803.0,\n",
-       " -78.95: 889.0,\n",
-       " -78.905: 1059.0,\n",
-       " -78.86: 1222.0,\n",
-       " -78.815: 1201.0,\n",
-       " -78.77000000000001: 1599.5,\n",
-       " -78.72500000000001: 1965.0,\n",
-       " -78.68: 2230.5,\n",
-       " -78.635: 2225.5,\n",
-       " -78.59: 2815.0,\n",
-       " -78.545: 2713.5,\n",
-       " -78.5: 2983.0,\n",
-       " -78.455: 2425.0,\n",
-       " -78.41000000000001: 2120.5,\n",
-       " -78.36500000000001: 2228.5,\n",
-       " -78.32000000000001: 2256.5,\n",
-       " -78.275: 2568.0,\n",
-       " -78.23: 2839.0,\n",
-       " -78.185: 2860.0,\n",
-       " -78.14: 3022.0,\n",
-       " -78.095: 3233.5,\n",
-       " -78.05000000000001: 3729.5,\n",
-       " -78.00500000000001: 3990.0,\n",
-       " -77.96000000000001: 4054.5,\n",
-       " -77.915: 3127.5,\n",
-       " -77.87: 3156.5,\n",
-       " -77.825: 2317.0,\n",
-       " -77.78: 2156.0,\n",
-       " -77.735: 2736.0,\n",
-       " -77.69: 2012.0,\n",
-       " -77.64500000000001: 1872.0,\n",
-       " -77.60000000000001: 1620.5,\n",
-       " -77.555: 1498.5,\n",
-       " -77.51: 1351.0,\n",
-       " -77.465: 1087.0,\n",
-       " -77.42: 936.5,\n",
-       " -77.375: 689.5,\n",
-       " -77.33: 522.0,\n",
-       " -77.28500000000001: 426.0,\n",
-       " -77.24000000000001: 401.0,\n",
-       " -77.19500000000001: 386.0,\n",
-       " -77.15: 380.0,\n",
-       " -77.105: 364.0,\n",
-       " -77.06: 341.0,\n",
-       " -77.015: 337.0,\n",
-       " -76.97: 329.0,\n",
-       " -76.92500000000001: 324.0,\n",
-       " -76.88000000000001: 321.0,\n",
-       " -76.83500000000001: 318.0,\n",
-       " -76.79: 286.0,\n",
-       " -76.745: 285.0,\n",
-       " -76.7: 281.0,\n",
-       " -76.655: 274.0,\n",
-       " -76.61: 269.0,\n",
-       " -76.565: 265.0,\n",
-       " -76.52000000000001: 302.0,\n",
-       " -76.47500000000001: 297.0,\n",
-       " -76.43: 275.0,\n",
-       " -76.385: 262.0,\n",
-       " -76.34: 268.0,\n",
-       " -76.295: 242.0,\n",
-       " -76.25: 243.0,\n",
-       " -76.205: 227.0,\n",
-       " -76.16000000000001: 238.0,\n",
-       " -76.11500000000001: 250.0,\n",
-       " -76.07000000000001: 260.0,\n",
-       " -76.025: 257.0,\n",
-       " -75.98: 258.0,\n",
-       " -75.935: 252.0,\n",
-       " -75.89: 246.0,\n",
-       " -75.845: 254.0,\n",
-       " -75.80000000000001: 264.0,\n",
-       " -75.75500000000001: 259.0,\n",
-       " -75.71000000000001: 232.0,\n",
-       " -75.665: 226.0}"
+       "[[85.5, -80.12, 0.0],\n",
+       " [160.5, -80.075, 0.0],\n",
+       " [254.5, -80.03, 0.0],\n",
+       " [161.0, -79.985, 0.0],\n",
+       " [140.0, -79.94, 0.0],\n",
+       " [168.0, -79.89500000000001, 0.0],\n",
+       " [276.0, -79.85000000000001, 0.0],\n",
+       " [336.0, -79.805, 0.0],\n",
+       " [292.0, -79.76, 0.0],\n",
+       " [250.0, -79.715, 0.0],\n",
+       " [201.5, -79.67, 0.0],\n",
+       " [152.0, -79.625, 0.0],\n",
+       " [167.0, -79.58, 0.0],\n",
+       " [191.0, -79.53500000000001, 0.0],\n",
+       " [194.0, -79.49000000000001, 0.0],\n",
+       " [200.0, -79.44500000000001, 0.0],\n",
+       " [229.0, -79.4, 0.0],\n",
+       " [234.0, -79.355, 0.0],\n",
+       " [297.5, -79.31, 0.0],\n",
+       " [343.5, -79.265, 0.0],\n",
+       " [383.0, -79.22, 0.0],\n",
+       " [431.5, -79.17500000000001, 0.0],\n",
+       " [494.0, -79.13000000000001, 0.0],\n",
+       " [552.0, -79.08500000000001, 0.0],\n",
+       " [692.0, -79.04, 0.0],\n",
+       " [803.0, -78.995, 0.0],\n",
+       " [889.0, -78.95, 0.0],\n",
+       " [1059.0, -78.905, 0.0],\n",
+       " [1222.0, -78.86, 0.0],\n",
+       " [1201.0, -78.815, 0.0],\n",
+       " [1599.5, -78.77000000000001, 0.0],\n",
+       " [1965.0, -78.72500000000001, 0.0],\n",
+       " [2230.5, -78.68, 0.0],\n",
+       " [2225.5, -78.635, 0.0],\n",
+       " [2815.0, -78.59, 0.0],\n",
+       " [2713.5, -78.545, 0.0],\n",
+       " [2983.0, -78.5, 0.0],\n",
+       " [2425.0, -78.455, 0.0],\n",
+       " [2120.5, -78.41000000000001, 0.0],\n",
+       " [2228.5, -78.36500000000001, 0.0],\n",
+       " [2256.5, -78.32000000000001, 0.0],\n",
+       " [2568.0, -78.275, 0.0],\n",
+       " [2839.0, -78.23, 0.0],\n",
+       " [2860.0, -78.185, 0.0],\n",
+       " [3022.0, -78.14, 0.0],\n",
+       " [3233.5, -78.095, 0.0],\n",
+       " [3729.5, -78.05000000000001, 0.0],\n",
+       " [3990.0, -78.00500000000001, 0.0],\n",
+       " [4054.5, -77.96000000000001, 0.0],\n",
+       " [3127.5, -77.915, 0.0],\n",
+       " [3156.5, -77.87, 0.0],\n",
+       " [2317.0, -77.825, 0.0],\n",
+       " [2156.0, -77.78, 0.0],\n",
+       " [2736.0, -77.735, 0.0],\n",
+       " [2012.0, -77.69, 0.0],\n",
+       " [1872.0, -77.64500000000001, 0.0],\n",
+       " [1620.5, -77.60000000000001, 0.0],\n",
+       " [1498.5, -77.555, 0.0],\n",
+       " [1351.0, -77.51, 0.0],\n",
+       " [1087.0, -77.465, 0.0],\n",
+       " [936.5, -77.42, 0.0],\n",
+       " [689.5, -77.375, 0.0],\n",
+       " [522.0, -77.33, 0.0],\n",
+       " [426.0, -77.28500000000001, 0.0],\n",
+       " [401.0, -77.24000000000001, 0.0],\n",
+       " [386.0, -77.19500000000001, 0.0],\n",
+       " [380.0, -77.15, 0.0],\n",
+       " [364.0, -77.105, 0.0],\n",
+       " [341.0, -77.06, 0.0],\n",
+       " [337.0, -77.015, 0.0],\n",
+       " [329.0, -76.97, 0.0],\n",
+       " [324.0, -76.92500000000001, 0.0],\n",
+       " [321.0, -76.88000000000001, 0.0],\n",
+       " [318.0, -76.83500000000001, 0.0],\n",
+       " [286.0, -76.79, 0.0],\n",
+       " [285.0, -76.745, 0.0],\n",
+       " [281.0, -76.7, 0.0],\n",
+       " [274.0, -76.655, 0.0],\n",
+       " [269.0, -76.61, 0.0],\n",
+       " [265.0, -76.565, 0.0],\n",
+       " [302.0, -76.52000000000001, 0.0],\n",
+       " [297.0, -76.47500000000001, 0.0],\n",
+       " [275.0, -76.43, 0.0],\n",
+       " [262.0, -76.385, 0.0],\n",
+       " [268.0, -76.34, 0.0],\n",
+       " [242.0, -76.295, 0.0],\n",
+       " [243.0, -76.25, 0.0],\n",
+       " [227.0, -76.205, 0.0],\n",
+       " [238.0, -76.16000000000001, 0.0],\n",
+       " [250.0, -76.11500000000001, 0.0],\n",
+       " [260.0, -76.07000000000001, 0.0],\n",
+       " [257.0, -76.025, 0.0],\n",
+       " [258.0, -75.98, 0.0],\n",
+       " [252.0, -75.935, 0.0],\n",
+       " [246.0, -75.89, 0.0],\n",
+       " [254.0, -75.845, 0.0],\n",
+       " [264.0, -75.80000000000001, 0.0],\n",
+       " [259.0, -75.75500000000001, 0.0],\n",
+       " [232.0, -75.71000000000001, 0.0],\n",
+       " [226.0, -75.665, 0.0]]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_dictionary"
+    "data_list"
    ]
   },
   {
@@ -318,20 +322,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "# adding header\n",
-    "headerList = ['longitude', 'elevation']\n",
+    "headerList = ['elevation', 'longitude', 'latitude']\n",
     "\n",
     "a_file = open(\"./data/test.csv\", \"w\")\n",
     "writer = csv.writer(a_file)\n",
     "\n",
     "writer.writerow(headerList)\n",
     "\n",
-    "for key, value in data_dictionary.items():\n",
-    "    writer.writerow([key, value])\n",
+    "for i in data_list:\n",
+    "    writer.writerow(i)\n",
+    "\n",
+    "# for key, value in data_dictionary.items():\n",
+    "#     writer.writerow([key, value])\n",
     "\n",
     "a_file.close()"
    ]
@@ -342,10 +349,15 @@
    "source": [
     "### Notes\n",
     "\n",
+    "Longitude @ 0.0 Latitude \n",
     "- 1 degree = 60 nautical miles\n",
     "- 1 nautical mile = 1.852 km\n",
     "- 2.7 nautical miles = 5 km\n",
-    "- 2.7 nautical miles = 0.045 degrees"
+    "- 2.7 nautical miles = 0.045 degrees\n",
+    "\n",
+    "Latitude\n",
+    "- 1 degree = 111 km\n",
+    "- "
    ]
   }
  ],
